deploy/k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hupi
spec:
  selector:
    app: hupi
  ports:
    - name: http
      port: 80
      targetPort: http
